Added wait for sl-ee in initializer, updated GC algorithms